--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">Countries</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="app_bar_title">Where in the world?</string>
+
+    <!-- App Theme -->
+    <string name="theme_light">Light Mode</string>
+    <string name="theme_dark">Dark Mode</string>
+    <string name="theme_system">System Default</string>
+    <string name="choose_theme">Choose a theme</string>
+    <string name="cancel">Cancel</string>
+
+    <!-- Country Text -->
+    <string name="population">Population</string>
+    <string name="region">Region</string>
+    <string name="capital">Capital</string>
+
+    <string name="search">Search for a country…</string>
 </resources>
